Made possible to debug logout stack trace